--- a/main/index.html
+++ b/main/index.html
@@ -34,25 +34,25 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>Since Jun. 2022, I has been an R&amp;D engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on addressing various optimization problems emerging in autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in engineering management.
+<p>Since Jun. 2022, I has been an R&amp;D engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a> (but I will be leaving soon), where I focus on addressing various optimization problems emerging in autonomous driving. Before that, I was a master student of Huazhong University of Science &amp; Technology, where I worked on theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>.
 
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 <br /> Contact: jingwangli[at]outlook[dot]com
 </p>
 </td></tr></table>
 <h2>Research Interests</h2>
-<p>Decentralized optimization.
+<p>My research interests mainly focus on theory and applications of decentralized optimization, currently I am devoted to developing efficient and robust algorithms for a class of decentralized optimization problems with globally coupled constraints.
 
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : M.S. in Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : M.S. in <i>control science &amp; engineering</i>, Huazhong University of Science &amp; Technology
 </p>
 </li>
-<li><p>Sept. 2016 - Jun. 2019 : B.S. in Engineering Management, School of Public Administration, Huazhong Agricultural University
+<li><p>Sept. 2016 - Jun. 2019 : B.S. in <i>engineering management</i>, Huazhong Agricultural University
 </p>
 </li>
-<li><p>Sept. 2015 - Jul. 2016 : Aquatic Science &amp; Technology (I transfered to engineering management in 2016 fall), School of Fisheries, Huazhong Agricultural University
+<li><p>Sept. 2015 - Jul. 2016 : <i>aquatic science &amp; technology</i> (I switched to <i>engineering management</i> at the beginning of my sophomore year.), Huazhong Agricultural University
 
 </p>
 </li>
@@ -114,7 +114,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-02 21:08:45 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-09-08 00:02:49 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
