--- a/main/index.html
+++ b/main/index.html
@@ -46,13 +46,13 @@ MathJax.Hub.Config({
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : M.S. in <i>control science &amp; engineering</i>, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : Master of Science, <i>Control science &amp; engineering</i>, Huazhong University of Science &amp; Technology
 </p>
 </li>
-<li><p>Sept. 2016 - Jun. 2019 : B.S. in <i>engineering management</i>, Huazhong Agricultural University
+<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management, <i>Engineering management</i>, Huazhong Agricultural University
 </p>
 </li>
-<li><p>Sept. 2015 - Jul. 2016 : <i>aquatic science &amp; technology</i> (I switched to <i>engineering management</i> at the beginning of my sophomore year.), Huazhong Agricultural University
+<li><p>Sept. 2015 - Jul. 2016 : Majored in <i>aquatic science &amp; technology</i> (I switched to <i>engineering management</i> at the beginning of my sophomore year), Huazhong Agricultural University
 
 </p>
 </li>
@@ -114,7 +114,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-08 00:02:49 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-09-09 15:25:53 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
