--- a/main/index.html
+++ b/main/index.html
@@ -59,6 +59,9 @@ MathJax.Hub.Config({
 </ul>
 <h2>Preprints</h2>
 <ol>
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2309.06330" target=&ldquo;blank&rdquo;>&ldquo;Inexact decentralized dual gradient tracking for constraint-coupled optimization&rdquo;</a>, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+</p>
+</li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, <i>arXiv:2205.11119</i>, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
@@ -114,7 +117,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-09 15:25:53 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-09-13 08:33:16 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
