--- a/main/index.html
+++ b/main/index.html
@@ -34,14 +34,18 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>From Jun. 2022 to Sept. 2023, I worked as an R&amp;D engineer at FABU.AI, focusing on addressing various optimization problems in the field of autonomous driving. Prior to that, I pursued my master's degree at Huazhong University of Science &amp; Technology, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from Huazhong Agricultural University.
+<p>Since Sept. 2023, I have been working as a Research Assistant in <a href="https://www.cuhk.edu.cn/en" target=&ldquo;blank&rdquo;>Chinese University of Hong Kong, Shenzhen (CUHK-Shenzhen)</a>, where my research focuses on non-smooth decentralized optimization under the guidance of <a href="https://www.xiao-li.org/" target=&ldquo;blank&rdquo;>Prof. Xiao Li</a>. From Jun. 2022 to Sept. 2023, I worked as an R&amp;D Engineer at <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, focusing on addressing optimization problems in the field of autonomous driving. Prior to that, I pursued my master's degree at <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>, where I conducted research on the theory of decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Before that, I obtained my bachelor's degree from <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>.
 
+<br />
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 <br /> Contact: jingwangli[at]outlook[dot]com
 </p>
 </td></tr></table>
 <h2>News</h2>
 <ul>
+<li><p>Sept. 2023, I joined CUHK-Shenzhen as a Research Assistant.
+</p>
+</li>
 <li><p>Sept. 2023, I resigned from FABU.AI, where I had the privilege of working alongside exceptional colleagues for over a year.
 
 </p>
@@ -50,20 +54,16 @@ MathJax.Hub.Config({
 <h2>Research Interests</h2>
 <p>My research interests mainly focus on theory and applications of decentralized optimization, currently I am devoted to developing efficient and robust algorithms for a class of decentralized optimization problems with globally coupled constraints.
 
-</p>
-<h2>Work Experience</h2>
-<ul>
-<li><p>Jun. 2022 - Sept. 2023 : R&amp;D Engineer, <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>
+
+
 
 </p>
-</li>
-</ul>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : Master of Science, Control Science &amp; Engineering, <a href="http://english.hust.edu.cn/" target=&ldquo;blank&rdquo;>Huazhong University of Science &amp; Technology</a>
+<li><p>Sept. 2019 - Jun. 2022 : Master of Science, Control Science &amp; Engineering, Huazhong University of Science &amp; Technology
 </p>
 </li>
-<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management, Engineering Management, <a href="https://www.hzau.edu.cn/en/HOME.htm" target=&ldquo;blank&rdquo;>Huazhong Agricultural University</a>
+<li><p>Sept. 2016 - Jun. 2019 : Bachelor of Management, Engineering Management, Huazhong Agricultural University
 </p>
 </li>
 <li><p>Sept. 2015 - Jul. 2016 : Majored in Aquatic Science &amp; Technology (I switched to Engineering Management at the beginning of my sophomore year), Huazhong Agricultural University
@@ -131,7 +131,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-15 19:05:27 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-09-16 13:06:37 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
