--- a/main/index.html
+++ b/main/index.html
@@ -109,7 +109,13 @@ Before that, I received a BSc in Engineering Management in 2019 from <a href="ht
 </li>
 <li><p>IEEE Transactions on Systems, Man and Cybernetics: Systems
 
+</p>
+</li>
+</ul>
 
+</li>
+</ul>
+<p><a href='https://clustrmaps.com/site/1bwx0'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=500&t=tt&d=BDGsw5V6iv54McgDHRtNuFlIts1mBLDxkd05mTjZjVg&co=2d78ad&ct=ffffff'/></a>
 
 
 
@@ -120,11 +126,6 @@ Before that, I received a BSc in Engineering Management in 2019 from <a href="ht
 
 
 </p>
-</li>
-</ul>
-
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
 Last updated on 2024-03-31.
