--- a/main/cv.html
+++ b/main/cv.html
@@ -57,28 +57,34 @@ MathJax.Hub.Config({
 </ul>
 <h2>Awards</h2>
 <ul>
-<li><p>Jun. 2022, <a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong University of Science &amp; Technology</a>
+<li><p>Jun. 2022: Outstanding Graduate of Huazhong University of Science &amp; Technology [<a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Sept. 2019, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
+<li><p>Sept. 2019: National Innovation Contest for Intelligent Construction and Management, First prize [<a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Sept. 2019, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Outstanding Bachelor Degree Thesis of Huazhong Agricultural University</a>
+<li><p>Sept. 2019: Outstanding Bachelor Degree Thesis of Huazhong Agricultural University [<a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Jun. 2019, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong Agricultural University</a>
+<li><p>Jun. 2019: Outstanding Graduate of Huazhong Agricultural University [<a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Dec. 2017, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>Programming Contest of Huazhong Agricultural University, Second prize</a>
+<li><p>May 2018: Computer Design Contest of Huazhong Agricultural University, Third prize [<a href="http://storage.jingwang.site/doc/2018-HZAU-Computer-Design-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p>Nov. 2017, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
+<li><p>Dec. 2017: Programming Contest of Huazhong Agricultural University, Second prize [<a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+</p>
+</li>
+<li><p>Nov. 2017: China Undergraduate Mathematical Contest in Modeling, First prize [<a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+</p>
+</li>
+<li><p>May 2017: Surveying and Mapping Skills Contest of Huazhong Agricultural University, Third prize [<a href="http://storage.jingwang.site/doc/2017-HZAU-Surveying-Contest.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-06.
+Last updated on 2024-04-07.
 </div>
 </div>
 </div>
