--- a/main/index.html
+++ b/main/index.html
@@ -80,21 +80,29 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 
+
 </p>
 </li>
 </ol>
-<h2>Publications</h2>
+<h2>Journal Papers</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems</i>, 2024. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2024</i>. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2022</i>. [<a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation</i>, 2023. [<a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>DOI</a>]
+<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation, 2023</i>. [<a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>DOI</a>]
+
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. &ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;, <i>International Conference on Guidance, Navigation and Control</i>, 2022. [<a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>DOI</a>]
+</ol>
+<h2>Conference Papers</h2>
+<ol>
+<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. &ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;, <i>ICGNC 2022</i>. [<a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>DOI</a>]
+</p>
+</li>
+<li><p>Bingxi Jia*, Haidong Ren, Zheng Yang, <b>Jingwang Li</b> and Xiaofei He. &ldquo;Cascaded motion estimation for intelligent vehicles in GNSS-denied scenes&rdquo;, <i>CCC 2023</i>. [<a href="https://doi.org/10.23919/CCC58697.2023.10239725" target=&ldquo;blank&rdquo;>DOI</a>]
 
 </p>
 </li>
@@ -124,7 +132,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-06.
+Last updated on 2024-04-07.
 </div>
 </div>
 </div>
