--- a/main/index.html
+++ b/main/index.html
@@ -73,36 +73,39 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p><p>where \(f_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R}\), \(g_i:\mathbb{R}^{d_i} \rightarrow \mathbb{R} \cup \{+\infty\}\) and \(A_i \in \mathbb{R}^{p \times d_i}\) are private for agent \(i\), while \(h:\mathbb{R}^p \rightarrow \mathbb{R} \cup \{+\infty\}\) is public for all agents. The problem \(\eqref{original_pro}\) captures a wide range of real-world scientific and engineering problems, including decentralized vertical federated learning, decentralized optimal transport, decentralized resource allocation, and more, which is exactly why it appeals to me so much.
 
 </p>
-<h2>Preprints</h2>
+<h2>Publications</h2>
+<p>* indicates the corresponding author
+
+</p>
+<h3>Preprints</h3>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Decentralized constraint-coupled optimization with inexact oracle&rdquo;, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Decentralized constraint-coupled optimization with inexact oracle&rdquo;, <i>arXiv:2309.06330</i>, 2023. [<a href="https://arxiv.org/pdf/2309.06330.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
 
-
 </p>
 </li>
 </ol>
-<h2>Journal Papers</h2>
+<h3>Journal Papers</h3>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2024</i>. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
-</p>
-</li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2022</i>. [<a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;NPGA: A unified algorithmic framework for decentralized constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2024</i>. [<a href="https://doi.org/10.1109/TCNS.2024.3354882" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
 </p>
 </li>
 <li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation, 2023</i>. [<a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>DOI</a>]
+</p>
+</li>
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, <i>IEEE Transactions on Control of Network Systems, 2022</i>. [<a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>DOI</a>] [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>arXiv</a>]
 
 </p>
 </li>
 </ol>
-<h2>Conference Papers</h2>
+<h3>Conference Papers</h3>
 <ol>
-<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. &ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;, <i>ICGNC 2022</i>. [<a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>DOI</a>]
+<li><p>Bingxi Jia*, Haidong Ren, Zheng Yang, <b>Jingwang Li</b> and Xiaofei He. &ldquo;Cascaded motion estimation for intelligent vehicles in GNSS-denied scenes&rdquo;, <i>CCC 2023</i>. [<a href="https://doi.org/10.23919/CCC58697.2023.10239725" target=&ldquo;blank&rdquo;>DOI</a>]
 </p>
 </li>
-<li><p>Bingxi Jia*, Haidong Ren, Zheng Yang, <b>Jingwang Li</b> and Xiaofei He. &ldquo;Cascaded motion estimation for intelligent vehicles in GNSS-denied scenes&rdquo;, <i>CCC 2023</i>. [<a href="https://doi.org/10.23919/CCC58697.2023.10239725" target=&ldquo;blank&rdquo;>DOI</a>]
+<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. &ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;, <i>ICGNC 2022</i>. [<a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>DOI</a>]
 
 </p>
 </li>
@@ -132,7 +135,7 @@ Before that, I received a BSc in Engineering Management from <a href="https://ww
 </p>
 <div id="footer">
 <div id="footer-text">
-Last updated on 2024-04-07.
+Last updated on 2024-04-08.
 </div>
 </div>
 </div>
